Changed to use JDK 1.4 way of converting integer to Integer.